--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ section {
   margin: 1rem 0;
   text-align: center;
 }
-.add-toggle { background: #eee; font-size: 0.6rem; }
+.add-toggle { background: #eee; font-size: 0.8rem; }
 .section-header {
   font-size: 1.2rem;
   font-weight: bold;
@@ -42,12 +42,12 @@ section {
 #projects li {
   list-style: none;
   padding: 0.25rem;
-  font-size: 0.5rem;
+  font-size: 0.8rem;
 }
 .task-grid {
   display: grid;
   grid-template-columns: 2fr repeat(7, 1fr);
-  gap: 0.5rem;
+  gap: 0.25rem;
   margin-bottom: 1rem;
   align-items: stretch;
 }
@@ -59,8 +59,8 @@ section {
   justify-content: center;
 }
 .task-info { display: block; text-align: left; }
-.task-name { font-size: 0.9rem; }
-.task-meta { font-size: 0.7rem; }
+.task-name { font-size: 0.9rem; padding: 0.1rem 0; }
+.task-meta { font-size: 0.7rem; padding: 0.1rem 0; }
 .circle {
   width: 20px;
   height: 20px;
