Refine task cell layout

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ section {
   align-items: center;
   justify-content: center;
 }
-.task-info { display: flex; flex-direction: column; text-align: left; }
-.task-info div { padding: 0.15rem 0; }
+.task-info { display: flex; flex-direction: column; text-align: left; align-items: flex-start; justify-content: flex-start; }
+.task-info div { padding: 0.05rem 0; }
 .task-name { font-size: 0.9rem; }
 .task-meta { font-size: 0.7rem; }
 .circle {
