Add navigation and new pages

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ section {
   <header>
     <h1>Task Manager</h1>
   </header>
+<div id="nav-placeholder"></div>
+<script src="nav-loader.js"></script>
 
   <div id="toast" class="hidden"></div>
   <section>
