Embed navigation in page headers

--- a/gardening.html
+++ b/gardening.html
@@ -5,8 +5,10 @@
 <title>Gardening</title>
 </head>
 <body>
-<header><h1>Gardening</h1></header>
-<div id="nav-placeholder"></div>
+<header>
+  <h1>Gardening</h1>
+  <div id="nav-placeholder"></div>
+</header>
 <script src="nav-loader.js"></script>
 <p>Content coming soon.</p>
 </body>
