--- a/nav.html
+++ b/nav.html
@@ -4,6 +4,7 @@
   <a href="gardening.html">Gardening</a>
   <a href="diy.html">DIY</a>
   <a href="work.html">Work</a>
+  <a href="spending.html">Spending</a>
 </nav>
 <style>
   .main-nav {
