--- a/spending.html
+++ b/spending.html
@@ -1,6 +1,8 @@
 <body>
-<header><h1>Spending &amp; Finances</h1></header>
-<div id="nav-placeholder"></div>
+<header>
+  <h1>Spending &amp; Finances</h1>
+  <div id="nav-placeholder"></div>
+</header>
 <script src="nav-loader.js"></script>
 <section>
   <div class="toggle section-header" onclick="toggle('settings')">Settings</div>
