--- a/work.html
+++ b/work.html
@@ -5,8 +5,10 @@
 <title>Work</title>
 </head>
 <body>
-<header><h1>Work</h1></header>
-<div id="nav-placeholder"></div>
+<header>
+  <h1>Work</h1>
+  <div id="nav-placeholder"></div>
+</header>
 <script src="nav-loader.js"></script>
 <p>Content coming soon.</p>
 </body>
