--- a/shopping.html
+++ b/shopping.html
@@ -3,6 +3,42 @@
 <head>
 <meta charset="UTF-8">
 <title>Shopping</title>
+<style>
+body { font-family: 'Segoe UI', Tahoma, sans-serif; margin: 0; padding: 0; }
+header {
+  background: #fff;
+  color: #ff69b4;
+  padding: 1rem;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
+}
+section {
+  padding: 1rem;
+  border-bottom: 10px solid pink;
+}
+.toggle {
+  cursor: pointer;
+  background: #f4f4f4;
+  padding: 0.5rem;
+  border-radius: 4px;
+  margin: 1rem 0;
+  text-align: center;
+}
+.add-toggle { background: #eee; font-size: 0.8rem; }
+.section-header {
+  font-size: 1.2rem;
+  font-weight: bold;
+  background: #cfe2ff;
+}
+.subtoggle { font-size: 0.9rem; margin-top: 0.5rem; }
+.task-table { width: 100%; border-collapse: collapse; }
+.task-table th, .task-table td { border: 1px solid #ccc; padding: 0.25rem; text-align: left; }
+.form-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 0.5rem; align-items: center; }
+.form-grid label { display: flex; flex-direction: column; font-size: 0.9rem; }
+.hidden { display: none !important; }
+.form-grid input, .form-grid select { width: 100%; font-size: 1rem; padding: 0.4rem; }
+#toast { position: fixed; bottom: 1rem; left: 50%; transform: translateX(-50%); background: #333; color: #fff; padding: 0.5rem 1rem; border-radius: 4px; }
+</style>
 </head>
 <body>
 <header>
@@ -10,6 +46,155 @@
   <div id="nav-placeholder"></div>
 </header>
 <script src="nav-loader.js"></script>
-<p>Content coming soon.</p>
+<div id="toast" class="hidden"></div>
+<section>
+  <div class="toggle section-header" onclick="toggle('shoppingSection')">Shopping List</div>
+  <div id="shoppingSection" class="hidden">
+    <div id="shoppingList"></div>
+    <div class="toggle add-toggle" onclick="toggle('addShopping')">Add Item</div>
+    <div id="addShopping" class="hidden subtoggle form-grid">
+      <label>Name<input type="text" id="shoppingName"></label>
+      <label>Project<select id="shoppingProject"></select></label>
+      <label>Est. Cost<input type="number" id="shoppingCost" step="0.01"></label>
+      <label>Month<input type="month" id="shoppingMonth"></label>
+      <div style="grid-column:1/-1;text-align:center;">
+        <button onclick="addShoppingItem()">Submit</button>
+      </div>
+    </div>
+  </div><!-- end shoppingSection -->
+</section>
+<script>
+let projects = [];
+let shoppingList = [];
+let nextId = 1;
+
+async function saveData() {
+  const data = { projects, shoppingList, nextId };
+  try {
+    await fetch('/api/data', {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify(data)
+    });
+  } catch (e) {
+    console.error('Failed to save data', e);
+  }
+}
+
+async function loadData() {
+  try {
+    const res = await fetch('/api/data');
+    if (!res.ok) return;
+    const obj = await res.json();
+    projects = obj.projects || [];
+    shoppingList = obj.shoppingList || [];
+    nextId = obj.nextId || 1;
+  } catch (e) {
+    console.error('Failed to load data', e);
+  }
+}
+
+function toggle(id) {
+  const el = document.getElementById(id);
+  if (el) el.classList.toggle('hidden');
+}
+
+function showMessage(msg) {
+  const toast = document.getElementById('toast');
+  toast.textContent = msg;
+  toast.classList.remove('hidden');
+  setTimeout(() => toast.classList.add('hidden'), 3000);
+}
+
+function renderProjects() {
+  const select = document.getElementById('shoppingProject');
+  if (!select) return;
+  select.innerHTML = '';
+  projects.forEach(p => {
+    if (!p.closed) {
+      const opt = document.createElement('option');
+      opt.value = p.name;
+      opt.textContent = p.name;
+      select.appendChild(opt);
+    }
+  });
+}
+
+function addShoppingItem() {
+  const name = document.getElementById('shoppingName').value;
+  const project = document.getElementById('shoppingProject').value;
+  const cost = document.getElementById('shoppingCost').value;
+  const month = document.getElementById('shoppingMonth').value;
+  if (!name) return;
+  const proj = projects.find(p => p.name === project);
+  if (proj && proj.closed) return;
+  const item = {
+    id: String(nextId).padStart(8, '0'),
+    name, project, cost, month, bought: false
+  };
+  nextId++;
+  shoppingList.push(item);
+  document.getElementById('shoppingName').value = '';
+  document.getElementById('shoppingCost').value = '';
+  document.getElementById('shoppingMonth').value = '';
+  showMessage('Item added');
+  saveData();
+  renderShopping();
+}
+
+function renderShopping() {
+  const div = document.getElementById('shoppingList');
+  div.innerHTML = '';
+  const openItems = shoppingList.filter(it => !it.bought);
+  if (openItems.length === 0) { div.textContent = 'No items'; return; }
+  const table = document.createElement('table');
+  table.className = 'task-table';
+  const head = document.createElement('tr');
+  head.innerHTML = '<th>Item</th><th>Project</th><th>Est. Cost</th><th>Month</th><th></th>';
+  table.appendChild(head);
+  openItems.forEach(it => {
+    const tr = document.createElement('tr');
+    const proj = projects.find(p => p.name === it.project);
+    const color = proj ? proj.color : '#000';
+    tr.innerHTML = `<td>${it.name}</td><td style="color:${color}">${it.project}</td><td>${it.cost||''}</td><td>${it.month||''}</td>`;
+    const td = document.createElement('td');
+    const b = document.createElement('button');
+    b.textContent = 'Bought';
+    b.onclick = () => toggleBoughtShopping(it.id);
+    const del = document.createElement('button');
+    del.textContent = 'Delete';
+    del.onclick = () => deleteShopping(it.id);
+    td.appendChild(b);
+    td.appendChild(del);
+    tr.appendChild(td);
+    table.appendChild(tr);
+  });
+  div.appendChild(table);
+}
+
+function toggleBoughtShopping(id) {
+  const item = shoppingList.find(i => i.id === id);
+  if (!item) return;
+  item.bought = true;
+  saveData();
+  renderShopping();
+}
+
+function deleteShopping(id) {
+  const idx = shoppingList.findIndex(i => i.id === id);
+  if (idx === -1) return;
+  shoppingList.splice(idx, 1);
+  saveData();
+  renderShopping();
+}
+
+async function init() {
+  await loadData();
+  await saveData();
+  renderProjects();
+  renderShopping();
+}
+init();
+</script>
 </body>
 </html>
