--- a/spending.html
+++ b/spending.html
@@ -1,9 +1,9 @@
 <body>
-<header><h1>Spending &amp; Finances</h1></header>
-<nav>
-  <a href="index.html">Tasks</a>
-  <a href="spending.html">Spending &amp; Finances</a>
-</nav>
+<header>
+  <h1>Spending &amp; Finances</h1>
+  <div id="nav-placeholder"></div>
+</header>
+<script src="nav-loader.js"></script>
 <section>
   <div class="toggle section-header" onclick="toggle('settings')">Settings</div>
   <div id="settings" class="hidden">
