--- a/today.html
+++ b/today.html
@@ -43,15 +43,15 @@ header {
   </div>
 </div>
 <script>
-let projects=[], weeklyTasks=[], oneOffTasks=[], recurringTasks=[], deletedTasks=[], shoppingList=[];
+let projects=[], weeklyTasks=[], oneOffTasks=[], recurringTasks=[], deletedTasks=[], shoppingList=[], longTermList=[], generalList=[];
 let todayTasks=[];
 let overdueTasks=[], dueTasks=[];
 let nextId=1;
 function formatISO(date){return date.toISOString().split('T')[0];}
 function formatUK(date){const d=new Date(date);if(isNaN(d)) return date||'';return d.toLocaleDateString('en-GB');}
 function startOfWeek(date){const d=new Date(date);const day=d.getDay();const diff=(day===0?-6:1-day);d.setDate(d.getDate()+diff);d.setHours(0,0,0,0);return d;}
-async function loadData(){try{const res=await fetch('/api/data');if(!res.ok) return;const obj=await res.json();projects=obj.projects||[];weeklyTasks=obj.weeklyTasks||[];oneOffTasks=obj.oneOffTasks||[];recurringTasks=obj.recurringTasks||[];deletedTasks=obj.deletedTasks||[];shoppingList=obj.shoppingList||[];nextId=obj.nextId||1;}catch(e){console.error('Failed to load data',e);}}
-async function saveData(){const data={projects,weeklyTasks,oneOffTasks,recurringTasks,deletedTasks,shoppingList,nextId};try{await fetch('/api/data',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(data)});}catch(e){console.error('Failed to save data',e);}}
+async function loadData(){try{const res=await fetch('/api/data');if(!res.ok) return;const obj=await res.json();projects=obj.projects||[];weeklyTasks=obj.weeklyTasks||[];oneOffTasks=obj.oneOffTasks||[];recurringTasks=obj.recurringTasks||[];deletedTasks=obj.deletedTasks||[];shoppingList=obj.shoppingList||[],longTermList=obj.longTermList||[],generalList=obj.generalList||[];nextId=obj.nextId||1;}catch(e){console.error('Failed to load data',e);}}
+async function saveData(){const data={projects,weeklyTasks,oneOffTasks,recurringTasks,deletedTasks,shoppingList,longTermList,generalList,nextId};try{await fetch('/api/data',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(data)});}catch(e){console.error('Failed to save data',e);}}
 function weeklyDueSoon(task){const today=new Date();for(let i=0;i<7;i++){const d=new Date(today);d.setDate(today.getDate()+i);const name=['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][d.getDay()];if(task.days.includes(name))return true;}return false;}
 function weeklyMissed(task){
   const missed = task.missedDates || [];
