--- a/today.html
+++ b/today.html
@@ -19,6 +19,7 @@ header {
 .task-list li { margin: 0.25rem 0; padding: 0.25rem; border-bottom: 1px solid #ddd; display:flex; justify-content: space-between; align-items:center; }
 .overdue { color: red; }
 .due { color: orange; }
+.due-soon { font-weight: bold; }
 .today-item { cursor: move; }
 </style>
 </head>
@@ -42,27 +43,108 @@ header {
   </div>
 </div>
 <script>
-let projects=[], weeklyTasks=[], oneOffTasks=[], recurringTasks=[], deletedTasks=[], shoppingList=[];
-let todayTasks=[];
+let projects=[], weeklyTasks=[], oneOffTasks=[], recurringTasks=[], deletedTasks=[], shoppingList=[], longTermList=[], generalList=[];
+let todayList=[], todayTasks=[];
 let overdueTasks=[], dueTasks=[];
 let nextId=1;
 function formatISO(date){return date.toISOString().split('T')[0];}
 function formatUK(date){const d=new Date(date);if(isNaN(d)) return date||'';return d.toLocaleDateString('en-GB');}
 function startOfWeek(date){const d=new Date(date);const day=d.getDay();const diff=(day===0?-6:1-day);d.setDate(d.getDate()+diff);d.setHours(0,0,0,0);return d;}
-async function loadData(){try{const res=await fetch('/api/data');if(!res.ok) return;const obj=await res.json();projects=obj.projects||[];weeklyTasks=obj.weeklyTasks||[];oneOffTasks=obj.oneOffTasks||[];recurringTasks=obj.recurringTasks||[];deletedTasks=obj.deletedTasks||[];shoppingList=obj.shoppingList||[];nextId=obj.nextId||1;}catch(e){console.error('Failed to load data',e);}}
-async function saveData(){const data={projects,weeklyTasks,oneOffTasks,recurringTasks,deletedTasks,shoppingList,nextId};try{await fetch('/api/data',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(data)});}catch(e){console.error('Failed to save data',e);}}
+async function loadData(){try{const res=await fetch('/api/data');if(!res.ok) return;const obj=await res.json();projects=obj.projects||[];weeklyTasks=obj.weeklyTasks||[];oneOffTasks=obj.oneOffTasks||[];recurringTasks=obj.recurringTasks||[];deletedTasks=obj.deletedTasks||[];shoppingList=obj.shoppingList||[];longTermList=obj.longTermList||[];generalList=obj.generalList||[];todayList=obj.todayList||[];nextId=obj.nextId||1;}catch(e){console.error('Failed to load data',e);}}
+async function saveData(){const data={projects,weeklyTasks,oneOffTasks,recurringTasks,deletedTasks,shoppingList,longTermList,generalList,todayList,nextId};try{await fetch('/api/data',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(data)});}catch(e){console.error('Failed to save data',e);}}
 function weeklyDueSoon(task){const today=new Date();for(let i=0;i<7;i++){const d=new Date(today);d.setDate(today.getDate()+i);const name=['Sun','Mon','Tue','Wed','Thu','Fri','Sat'][d.getDay()];if(task.days.includes(name))return true;}return false;}
-function weeklyMissed(task){return (task.missedDates||[]).some(()=>true);}
-function categorize(){overdueTasks=[];dueTasks=[];const today=new Date();const nextWeek=new Date();nextWeek.setDate(today.getDate()+7);weeklyTasks.filter(t=>t.status==='open').forEach(t=>{if(weeklyMissed(t))overdueTasks.push({category:'overdue',type:'weekly',item:t});else if(weeklyDueSoon(t))dueTasks.push({category:'due',type:'weekly',item:t});});oneOffTasks.filter(t=>t.status==='open').forEach(t=>{const due=t.dueDate?new Date(t.dueDate):null;if(due&&due<today)overdueTasks.push({category:'overdue',type:'oneoff',item:t});else if(due&&due<=nextWeek)dueTasks.push({category:'due',type:'oneoff',item:t});else dueTasks.push({category:'due',type:'oneoff',item:t});});recurringTasks.filter(t=>t.status==='open').forEach(t=>{const due=new Date(t.dueDate);if(due<today)overdueTasks.push({category:'overdue',type:'recurring',item:t});else if(due<=nextWeek)dueTasks.push({category:'due',type:'recurring',item:t});else dueTasks.push({category:'due',type:'recurring',item:t});});}
-function renderSide(){const ov=document.getElementById('overdueList');ov.innerHTML='';overdueTasks.forEach((t,i)=>{const li=document.createElement('li');li.className='overdue';li.textContent=`${t.item.name} (${t.item.project})`;const b=document.createElement('button');b.textContent='Select';b.onclick=()=>selectTask(t,i,'overdue');li.appendChild(b);ov.appendChild(li);});const due=document.getElementById('dueList');due.innerHTML='';dueTasks.forEach((t,i)=>{const li=document.createElement('li');li.className='due';let info='';if(t.type==='weekly'){info='('+t.item.days.join(', ')+')';}else{info='due '+formatUK(t.item.dueDate);}li.textContent=`${t.item.name} (${t.item.project}) ${info}`;const b=document.createElement('button');b.textContent='Select';b.onclick=()=>selectTask(t,i,'due');li.appendChild(b);due.appendChild(li);});}
+function weeklyMissed(task){
+  const missed = task.missedDates || [];
+  if(!missed.length) return false;
+  const today = new Date();
+  const start = startOfWeek(today);
+  start.setDate(start.getDate() - 7); // start of last week
+  return missed.some(d => {
+    const dt = new Date(d);
+    return dt >= start && dt <= today;
+  });
+}
+function categorize(){
+  overdueTasks=[];
+  dueTasks=[];
+  const today=new Date();
+  const nextWeek=new Date();
+  nextWeek.setDate(today.getDate()+7);
+
+  const pushDue=(type,item,soon)=>dueTasks.push({category:'due',type,item,soon});
+
+  weeklyTasks.filter(t=>t.status==='open').forEach(t=>{
+    if(weeklyMissed(t)){
+      overdueTasks.push({category:'overdue',type:'weekly',item:t});
+    }else{
+      pushDue('weekly',t,weeklyDueSoon(t));
+    }
+  });
+
+  oneOffTasks.filter(t=>t.status==='open').forEach(t=>{
+    const due=t.dueDate?new Date(t.dueDate):null;
+    if(due && due<today){
+      overdueTasks.push({category:'overdue',type:'oneoff',item:t});
+    }else{
+      const soon=due && due<=nextWeek;
+      pushDue('oneoff',t,soon);
+    }
+  });
+
+  recurringTasks.filter(t=>t.status==='open').forEach(t=>{
+    const due=new Date(t.dueDate);
+    if(due<today){
+      overdueTasks.push({category:'overdue',type:'recurring',item:t});
+    }else{
+      const soon=due<=nextWeek;
+      pushDue('recurring',t,soon);
+    }
+  });
+}
+function rebuildToday(){todayTasks=[];todayList.forEach(r=>{const arr=r.type==='oneoff'?oneOffTasks:r.type==='recurring'?recurringTasks:weeklyTasks;const task=arr.find(t=>t.id===r.id);if(!task)return;let i=overdueTasks.findIndex(o=>o.type===r.type&&o.item.id===r.id);if(i!==-1){overdueTasks.splice(i,1);todayTasks.push({category:'overdue',type:r.type,item:task});}else{ i=dueTasks.findIndex(o=>o.type===r.type&&o.item.id===r.id); if(i!==-1){dueTasks.splice(i,1);todayTasks.push({category:'due',type:r.type,item:task});}}});}
+function renderSide(){
+  const ov=document.getElementById('overdueList');
+  ov.innerHTML='';
+  overdueTasks.forEach((t,i)=>{
+    const li=document.createElement('li');
+    li.className='overdue';
+    li.textContent=`${t.item.name} (${t.item.project})`;
+    const b=document.createElement('button');
+    b.textContent='Select';
+    b.onclick=()=>selectTask(t,i,'overdue');
+    li.appendChild(b);
+    ov.appendChild(li);
+  });
+
+  const due=document.getElementById('dueList');
+  due.innerHTML='';
+  dueTasks.forEach((t,i)=>{
+    const li=document.createElement('li');
+    li.className='due';
+    if(t.soon) li.classList.add('due-soon');
+    let info='';
+    if(t.type==='weekly'){
+      info='('+t.item.days.join(', ')+')';
+    }else{
+      info='due '+formatUK(t.item.dueDate);
+    }
+    if(t.soon) info+=' (soon)';
+    li.textContent=`${t.item.name} (${t.item.project}) ${info}`;
+    const b=document.createElement('button');
+    b.textContent='Select';
+    b.onclick=()=>selectTask(t,i,'due');
+    li.appendChild(b);
+    due.appendChild(li);
+  });
+}
 function renderToday(){const ul=document.getElementById('todayList');ul.innerHTML='';todayTasks.forEach((t,i)=>{const li=document.createElement('li');li.className='today-item';li.draggable=true;li.dataset.index=i;li.textContent=`${t.item.name} (${t.item.project})`;const btnR=document.createElement('button');btnR.textContent='Remove';btnR.onclick=()=>removeToday(i);const btnC=document.createElement('button');btnC.textContent='Complete';btnC.onclick=()=>completeToday(i);li.appendChild(btnR);li.appendChild(btnC);ul.appendChild(li);});}
-function selectTask(t,idx,list){if(list==='overdue')overdueTasks.splice(idx,1);else dueTasks.splice(idx,1);todayTasks.push(t);renderSide();renderToday();}
-function removeToday(idx){const t=todayTasks.splice(idx,1)[0];if(t.category==='overdue')overdueTasks.push(t);else dueTasks.push(t);renderSide();renderToday();}
-function clearToday(){todayTasks.forEach(t=>{if(t.category==='overdue')overdueTasks.push(t);else dueTasks.push(t);});todayTasks=[];renderSide();renderToday();}
+function selectTask(t,idx,list){if(list==='overdue')overdueTasks.splice(idx,1);else dueTasks.splice(idx,1);todayTasks.push(t);todayList.push({type:t.type,id:t.item.id});saveData();renderSide();renderToday();}
+function removeToday(idx){const t=todayTasks.splice(idx,1)[0];todayList=todayList.filter(r=>!(r.type===t.type&&r.id===t.item.id));if(t.category==='overdue')overdueTasks.push(t);else dueTasks.push(t);saveData();renderSide();renderToday();}
+function clearToday(){todayTasks.forEach(t=>{if(t.category==='overdue')overdueTasks.push(t);else dueTasks.push(t);});todayTasks=[];todayList=[];saveData();renderSide();renderToday();}
 function computeNextDue(task,actionDate){const base=(task.from==='today')?new Date(actionDate):new Date(task.dueDate);let d=new Date(base);if(task.frequency==='daily')d.setDate(d.getDate()+task.interval);if(task.frequency==='weekly')d.setDate(d.getDate()+7*task.interval);if(task.frequency==='monthly')d.setMonth(d.getMonth()+task.interval);if(task.frequency==='yearly')d.setFullYear(d.getFullYear()+task.interval);return formatISO(d);}
-function completeToday(idx){const t=todayTasks.splice(idx,1)[0];const now=new Date();if(t.type==='oneoff'){t.item.completedDates.push(formatISO(now));t.item.status='closed';t.item.closedDate=formatISO(now);}else if(t.type==='recurring'){t.item.completedDates.push(t.item.dueDate);t.item.lastDiff=Math.floor((now-new Date(t.item.dueDate))/(1000*60*60*24));t.item.lastCompleted=formatISO(now);t.item.dueDate=computeNextDue(t.item,now);}else if(t.type==='weekly'){const iso=formatISO(now);if(!t.item.completedDates.includes(iso))t.item.completedDates.push(iso);t.item.missedDates=t.item.missedDates.filter(d=>d!==iso);}if(t.category==='overdue'){/* do nothing */}else{/* t.category due */}saveData();categorize();renderSide();renderToday();}
-document.getElementById('todayList').addEventListener('dragstart',e=>{if(e.target.tagName==='LI'){e.dataTransfer.setData('text/plain',e.target.dataset.index);}});document.getElementById('todayList').addEventListener('dragover',e=>{e.preventDefault();});document.getElementById('todayList').addEventListener('drop',e=>{e.preventDefault();const from=+e.dataTransfer.getData('text/plain');const to=e.target.closest('li');if(!to)return;const idx=+to.dataset.index;const item=todayTasks.splice(from,1)[0];todayTasks.splice(idx,0,item);renderToday();});
-async function init(){await loadData();categorize();renderSide();renderToday();}
+function completeToday(idx){const t=todayTasks.splice(idx,1)[0];todayList=todayList.filter(r=>!(r.type===t.type&&r.id===t.item.id));const now=new Date();if(t.type==='oneoff'){t.item.completedDates.push(formatISO(now));t.item.status='closed';t.item.closedDate=formatISO(now);}else if(t.type==='recurring'){t.item.completedDates.push(t.item.dueDate);t.item.lastDiff=Math.floor((now-new Date(t.item.dueDate))/(1000*60*60*24));t.item.lastCompleted=formatISO(now);t.item.dueDate=computeNextDue(t.item,now);}else if(t.type==='weekly'){const iso=formatISO(now);if(!t.item.completedDates.includes(iso))t.item.completedDates.push(iso);t.item.missedDates=t.item.missedDates.filter(d=>d!==iso);}if(t.category==='overdue'){/* do nothing */}else{/* t.category due */}saveData();categorize();renderSide();renderToday();}
+document.getElementById('todayList').addEventListener('dragstart',e=>{if(e.target.tagName==='LI'){e.dataTransfer.setData('text/plain',e.target.dataset.index);}});document.getElementById('todayList').addEventListener('dragover',e=>{e.preventDefault();});document.getElementById('todayList').addEventListener('drop',e=>{e.preventDefault();const from=+e.dataTransfer.getData('text/plain');const to=e.target.closest('li');if(!to)return;const idx=+to.dataset.index;const item=todayTasks.splice(from,1)[0];const ref=todayList.splice(from,1)[0];todayTasks.splice(idx,0,item);todayList.splice(idx,0,ref);saveData();renderToday();});
+async function init(){await loadData();categorize();rebuildToday();renderSide();renderToday();}
 init();
 </script>
 </body>
