--- a/index.html
+++ b/index.html
@@ -295,12 +295,16 @@ function startOfWeek(date) {
 }
 
 function formatISO(date) {
-  return date.toISOString().split('T')[0];
+  const d = new Date(date);
+  const y = d.getFullYear();
+  const m = String(d.getMonth() + 1).padStart(2, '0');
+  const day = String(d.getDate()).padStart(2, '0');
+  return `${y}-${m}-${day}`;
 }
 function formatUK(date) {
   const d = new Date(date);
   if (isNaN(d)) return date || '';
-  return d.toLocaleDateString('en-GB');
+  return d.toLocaleDateString('en-GB', { day: '2-digit', month: 'long', year: '2-digit' });
 }
 function showMessage(msg) {
   const toast = document.getElementById("toast");
@@ -719,7 +723,9 @@ function computeNextDue(task, actionDate) {
 function renderRecurring() {
   const list = document.getElementById('recurringList');
   list.innerHTML = '';
-  const open = recurringTasks.filter(t => t.status === 'open');
+  const open = recurringTasks
+    .filter(t => t.status === 'open')
+    .sort((a, b) => new Date(a.dueDate) - new Date(b.dueDate));
   if (open.length === 0) { list.textContent = 'No recurring tasks'; return; }
   const table = document.createElement('table');
   table.className = 'task-table';
