--- a/shopping.html
+++ b/shopping.html
@@ -7,7 +7,7 @@
 body { font-family: 'Segoe UI', Tahoma, sans-serif; margin: 0; padding: 0; }
 header {
   background: #fff;
-  color: #cc5500;
+  color: #ff69b4;
   padding: 1rem;
   text-align: center;
   border-bottom: 1px solid #ddd;
