--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ let currentWeekStart = startOfWeek(new Date());
 async function saveData() {
   const data = { projects, weeklyTasks, oneOffTasks, recurringTasks, deletedTasks, shoppingList, longTermList, generalList, todayList, nextId };
   try {
-    await fetch('/api/data', {
+    await fetch('/api/index-data', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify(data)
@@ -267,7 +267,7 @@ async function saveData() {
 
 async function loadData() {
   try {
-    const res = await fetch('/api/data');
+    const res = await fetch('/api/index-data');
     if (!res.ok) return;
     const obj = await res.json();
     projects = obj.projects || [];
