Add draggable calendar to work page

--- a/gardening.html
+++ b/gardening.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Gardening</title>
+<style>
+@media (max-width: 600px) {
+  html { font-size: 14px; }
+}
+</style>
 </head>
 <body>
 <header>
