--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Task Manager</title>
 <style>
 body { font-family: 'Segoe UI', Tahoma, sans-serif; margin: 0; padding: 0; }
@@ -85,6 +86,9 @@ section {
 .hidden { display: none !important; }
 .form-grid input, .form-grid select { width: 100%; font-size: 1rem; padding: 0.4rem; }
 #projectName { width: 200px; font-size: 1.1rem; }
+@media (max-width: 600px) {
+  html { font-size: 14px; }
+}
 </style>
 </head>
 <body>
