--- a/shopping.html
+++ b/shopping.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Shopping</title>
 <style>
 body { font-family: 'Segoe UI', Tahoma, sans-serif; margin: 0; padding: 0; }
@@ -38,6 +39,9 @@ section {
 .hidden { display: none !important; }
 .form-grid input, .form-grid select, .form-grid textarea { width: 100%; font-size: 1rem; padding: 0.4rem; }
 #toast { position: fixed; bottom: 1rem; left: 50%; transform: translateX(-50%); background: #333; color: #fff; padding: 0.5rem 1rem; border-radius: 4px; }
+@media (max-width: 600px) {
+  html { font-size: 14px; }
+}
 </style>
 </head>
 <body>
